--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  app_title: Coursework
+  app_title: Lizard English Academy
   app_description: Mikel Lizarralde coursework
 
   home:
