--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,3 +38,21 @@ en:
       title: Lizard English Academy
       welcome: Learn, Live & Discover the English language with Lizard English Academy
       welcoming_message: With small class sizes, wonderful teachers and great support staff, come study at Lizard English Academy
+
+    contact:
+      title: Contact Us
+      contact_us: Complete the following form to get in touch with us.
+
+      name: "Name:"
+      enter_name: Enter your name
+      email: "Email"
+      enter_email: Enter your email address
+      telephone: "Telephone:"
+      enter_telephone: Enter your telephone number
+      message: "Message:"
+      enter_message: What do you want to say?
+      submit: Contact Us
+
+    request_contact:
+      no_email: You must supply an email address
+      email_sent: Thank you. We will be in touch shortly.
